# SeedNDestroy

./: .gitignore  .gitmodules  CMakeLists.txt  CreatePDF.cc  CreatePDF.hh  CreatePDF_LetterBox.cc  DebugRecon.cc  DebugRecon.hh  Makefile  README.md  Recon.cc  Recon.hh  ReconFlat.cc  Recon_LetterBox.cc  SeedNDestroy.cc  SeedNDestroy.hh  SetROOTEnv.sh
include/: Args.cc  Args.hh  Centroid.hh  DrawNLLSpace.hh  DrawingUtils.hh  FitPerfMonitor.hh  FitResults.hh  MathUtils.hh  Multilateration.hh  NLL.hh  Output.hh  PathFit.hh  RATDSCopier.hh  Recon.hh  Recorder.hh  SVD.hh  TriggerTimeMap.hh  Utils.hh  VHits.hh
include/Algo/: VHits.hh  WOpt.hh
include/LinAlg/: SVD.hh
include/SnD/: Coord.hh  FitRecorder.hh  Geom.hh  GridWalker.hh  Hit.hh  Map.hh  Matrix.hh  Multilateration.hh  NLL.hh  PathFit.hh  PosT.hh  RATData.hh  RATReader.hh  Recon.hh  SVD.hh  SpaceGrid.hh  TReader.hh  Utils.hh  VHits.hh  Vector3.hh  ZAxis.hh  ZVector.hh
include/Templates/: Hit.hh  TAnalysis.hh  TData.hh  TReader.hh
macros/: Chi2Cut.C  ComparePDF.C  Debugging.ipynb  LowAnalysis.C  TRes.ipynb
src/Algo/: VHits.cc  WOpt.cc
src/Analyzers/: Erec.cc  MakePDF.cc  MakePDF.hh  Map.cc  Map.hh  Recon.cc  Recon.hh  TAnalyzer.cc  TAnalyzer.hh
src/Apps/: ANNIERecon.cc  CreatePDF.cc  CreatePDF.hh  Map.cc  Map.hh  Recon.cc  Recon.hh  TApp.cc  TApp.hh  TAppAnalysis.cc  TAppAnalysis.hh
src/CreatePDF/: PDFAnalysis.cc  PDFAnalysis.hh  TApp.cc  TAppAnalysis.cc  TAppAnalysis.hh
src/ERec/: ERecAnalysis.hh  TApp.cc
src/LinAlg/: SVD.cc
src/Readers/: ANNIE.cc  ANNIE.hh  NTuple.cc  NTuple.hh  Rat.cc  Rat.hh  TData.hh
src/Recon/: ReconAnalysis.cc  ReconAnalysis.hh  ReconApp.cc  ReconApp.hh
src/SnD/: Hit.cc  Map.cc  Multilateration.cc  NLL.cc  NTupleReader.cc  PDFAnalysis.cc  PDFAnalysis.hh  PosT.cc  RATData.hh  RATReader.cc  RATReader.hh  Recon.cc  SVD.cc  SpaceGrid.cc  TAnalysis.hh  TApp.cc  TApp.hh  TReader.hh  ZAxis.hh
src/SnD/CreatePDF/: PDFAnalysis.cc  TApp.cc  TApp.hh
src/SnD/ERec/: ERecAnalysis.cc  ERecAnalysis.hh  TApp.cc
src/SnD/Recon/: ReconAnalysis.cc  ReconAnalysis.hh  ReconApp.cc  ReconApp.hh
src/Templates/: TReader.cc
test/: HitTest.cc  Vector3Test.cc
